# Nexus-Learning-Portfolio

./: .gitignore
nexus-backend/: .env.example  .gitignore  alembic.ini  conftest.py  pyproject.toml
nexus-backend/app/: __init__.py  main.py
nexus-backend/app/api/: auth.py  bot.py  entries.py  profile.py  projects.py  search.py  skills.py
nexus-backend/app/core/: __init__.py  config.py  database.py  security.py
nexus-backend/app/models/: __init__.py  entry.py  profile.py  project.py  skill.py  user.py
nexus-backend/app/providers/: __init__.py  anthropic.py  base.py  openai.py
nexus-backend/app/schemas/: auth.py  common.py  entry.py  profile.py  project.py  skill.py
nexus-backend/app/services/: bot.py  entry.py  exceptions.py  profile.py  project.py  search.py  skill.py
nexus-backend/app/storage/: __init__.py  base.py  cloud.py  local.py
nexus-backend/app/webhooks/: __init__.py  service.py
nexus-backend/migrations/: env.py
nexus-backend/migrations/versions/: 2024_01_01_0000-0001_initial_schema.py
nexus-backend/tests/: test_auth_endpoints.py  test_bot_service.py  test_config.py  test_database.py  test_entry_endpoints.py  test_entry_service.py  test_main.py  test_profile_endpoints.py  test_profile_service.py  test_project_endpoints.py  test_project_service.py  test_providers.py  test_search_endpoints.py  test_search_service.py  test_security.py  test_skill_endpoints.py  test_skill_service.py  test_storage.py  test_webhook_service.py
nexus-frontend/: .env.example  FRONTEND_GUIDE.md  index.html  package-lock.json  package.json
(+20 files in other folders)
