[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "nexus-backend"
version = "0.1.0"
description = "Nexus Learning & Portfolio - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.15.2",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.4.0",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "pillow==11.2.1",
    "httpx==0.28.1",
    "slowapi==0.1.9",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "hypothesis==6.131.15",
    "httpx==0.28.1",
    "ruff==0.11.12",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
